2003-03-11  Matej Cepl  <matej@ceplovi.cz>

	* layouts/scrlttr2.layout: add Comment layout

2003-03-10  Michael Schmitt  <Michael.Schmitt@teststep.org>

	* configure.m4: fix the tgif converters

2003-03-10  Angus Leeming  <leeming@lyx.org>

	* scripts/lyxpreview2bitmap.sh: use variables for the names of
	'latex', 'dvips', 'gs' and 'pnmcrop' and move their definition to
	the top of the script.

	* scripts/lyxpreview2bitmap.sh: enable BAIL_OUT to print a message.

2003-03-10  Angus Leeming  <leeming@lyx.org>

	* images/graphics-insert.xpm: rename as
	dialog-show-new-inset_graphics.xpm.

2003-03-05  Angus Leeming  <leeming@lyx.org>

	* ui/default.ui: use 'dialog-show-new-inset "graphics"' instead
	of graphics-insert'.

2003-03-06  Serge Winitzki  <serge@cosmos.phy.tufts.edu>

	* bind/sciword.bind: update for 1.3.x 

2003-03-06  Dekel Tsur  <dekelts@tau.ac.il>

	* ui/default.ui: Add item for split env.

2003-03-05  Angus Leeming  <leeming@lyx.org>

	* ui/default.ui: use 'dialog-show-new-inset "external"' instead
	of 'external-insert'.
	use "dialog-show-new-inset include" instead of "buffer-child-insert".

2003-03-03  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* doc/LaTeXConfig.lyx.in: really get rid of iletter description

2003-03-03  PAP  <papasot@pythagoras.physics.upatras.gr>

	* layouts/kluwer.layout: update for 1.3.x compatibility

	* layouts/ijmpd.layout: re-add, since it only made it to 1.2.x.

	* doc/LaTeXConfig.lyx.in: add ijmpd

2003-02-28  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* layouts/llncs.layout: do not forget to define floats too

2003-02-27  Adrien Rebollo  <adrien.rebollo@gmx.fr>

	* examples/fr_Foils.lyx: new translation of example

2003-02-21  Angus Leeming  <leeming@lyx.org>

	* ui/default.ui: use the new 'dialog-show-new-inset "name"' instead
	of 'citation-insert', 'reference-insert' and 'bibtex-insert'.

2003-02-25  Angus Leeming  <leeming@lyx.org>

	* reLyX/BasicLyX.pm (regularizeLatexLength, getAsLyXLength):