@@ -1,3 +1,8 @@
+2003-03-11  Dekel Tsur  <dekelts@tau.ac.il>
+
+	* lyx2lyx/lyxconvert_218.py (change_infoinset): Convert Info insets
+	to Note insets.
+
 2003-03-11  Matej Cepl  <matej@ceplovi.cz>
 
 	* layouts/scrlttr2.layout: add Comment layout
